src/test/ui/const-eval-overflow-4.stderr
warning: constant evaluation error: attempt to add with overflow
  --> $DIR/const-eval-overflow-4.rs:23:13
   |
23 |     : [u32; (i8::MAX as i8 + 1i8) as usize]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: #[warn(const_err)] on by default

error[E0080]: constant evaluation error
  --> $DIR/const-eval-overflow-4.rs:23:13
   |
23 |     : [u32; (i8::MAX as i8 + 1i8) as usize]
   |             ^^^^^^^^^^^^^^^^^^^^^ attempt to add with overflow

error: aborting due to previous error

